@startuml userservice
skinparam linetype ortho

entity "users" as us {
    *id : uuid
    --
    login : varchar
    password : varchar
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity "profile" as pr {
    *id : uuid
    * user_id : uuid
    --
    username : varchar
    first_name : varchar
    last_name : varchar
    sur_name : varchar
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
    avatar_id : uuid
}

entity "roles" as role {
    *id : uuid
    --
    role_name : varchar
}

entity "user_roles" as ur {
    user_id : uuid
    role_id : uuid
}

entity "avatar" as ava {
    * id : uuid
    file_name : varchar
    bucket_name : varchar
    mime_type : varchar
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

us ||..o{ ur
ur }o..o{ role
pr ||..|| us
pr ||..o{ ava